import org.apache.tools.ant.filters.FixCrLfFilter

plugins {
    id 'java'
    id 'idea'
}

group = 'mod.wurmunlimited.npcs.crafter'
version = '0.5.13'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

def shortName = 'crafter'

repositories {
    mavenLocal()
    mavenCentral()
}

configurations {
    provided
}

sourceSets {
    main.compileClasspath += configurations.provided
    main.runtimeClasspath += configurations.provided
    test.compileClasspath = project(':WurmTestingHelper').sourceSets.main.output + configurations.provided + test.compileClasspath
    test.runtimeClasspath = project(':WurmTestingHelper').sourceSets.main.output + configurations.provided + test.runtimeClasspath
}

dependencies {
    def wurmDir = 'V:/Wurm Server'

    testImplementation project(':WurmTestingHelper')

    implementation fileTree(dir: wurmDir, includes: ["server.jar", "modlauncher.jar", "javassist.jar"])
    implementation fileTree(dir: wurmDir + '/lib', includes: ["*.jar"])

    implementation project(':BMLBuilder')
    implementation project(':PlaceNpc')
}

jar {
    def wurmDir = 'V:/Wurm Server'
    doLast {
        copy {
            from jar
            into wurmDir + '/mods/crafter/'
        }
        copy {
            from shortName + '.properties'
            into wurmDir + '/mods/'
            expand(output: 'print')
            filter(FixCrLfFilter, eol: FixCrLfFilter.CrLf.newInstance('crlf'))
        }
    }

    from {
        project(':PlaceNpc').sourceSets.main.output
    }
    from {
        project(':BMLBuilder').sourceSets.main.output
    }
    exclude '**/Trade.class'
    exclude '**/TradeHandler.class'
    exclude '**/TradingWindow.class'
    includeEmptyDirs false
    archiveFileName = shortName + '.jar'

    manifest {
        attributes('Implementation-Version': archiveVersion)
    }
}

test {
    useJUnitPlatform()

    doLast {
        delete fileTree('.') {
            include 'worker*.log'
        }
    }
}

task zip(type: Zip) {
    into(shortName) {
        from jar
    }
    from(shortName + '.properties') {
        expand(output: 'save')
        filter(FixCrLfFilter, eol: FixCrLfFilter.CrLf.newInstance('crlf'))
    }

    archiveFileName = shortName + '.zip'
}